--- a/F03-ACQ/index.html
+++ b/F03-ACQ/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <header>
-        <a href="/">
+        <a href="/MASK-W24-MOURYA-23EE10020/F03-ACQ/">
             <img src="./Resource/logo.jpeg" alt="Logo" width="100%" height="100%" />
         </a>
         <span class="divider"></span>
